--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ __pycache__/
 # C extensions
 *.so
 
+# Data folders
+Group_20/
+*.zip
+notes.txt
+*.png
+
 # Distribution / packaging
 .Python
 build/
